--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "ctm-wrn-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
+    "bootstrap": "^4.1.3",
     "concurrently": "^4.0.1",
     "nodemon": "^1.18.4",
     "react": "^16.5.2",
+    "react-bootstrap": "^0.32.4",
     "react-dom": "^16.5.2",
     "react-scripts": "2.0.4"
   },
@@ -13,7 +16,7 @@
     "react-start": "react-scripts start",
     "start": "concurrently \"yarn react-start\" \"cd server && yarn start\"",
     "react-build": "react-scripts build",
-    "build": "concurrently \"yarn react-build\" \"cd server && yarn build\"",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
